--- a/PizzApp-Front/src/app/components/navbar/navbar.component.html
+++ b/PizzApp-Front/src/app/components/navbar/navbar.component.html
@@ -11,7 +11,7 @@
           Administración
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownAdmin">
-          <a class="dropdown-item" href="#">Clientes</a>
+          <a class="dropdown-item" [routerLink]="['homeClientes']">Clientes</a>
           <!--<a class="dropdown-item" href="#">Pedidos</a>-->
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Productos</a>
