Primer intento de invocar a un servicio REST desde la vista, aún no funciona

--- a/PizzApp-Front/src/app/components/crear-cliente/crear-cliente.component.html
+++ b/PizzApp-Front/src/app/components/crear-cliente/crear-cliente.component.html
@@ -17,7 +17,7 @@
   Dirección:<br>
   <input type="text" name="firstname">
   <br><br>
-  <input type="submit" value="Aceptar">
+  <input type="submit" (click)= persistirCliente() value="Aceptar">
 </form>
 
 </body>
