feat: se agrega dropdowns para productos

--- a/PizzApp-Front/src/app/pedido/pedido.component.html
+++ b/PizzApp-Front/src/app/pedido/pedido.component.html
@@ -1,6 +1,6 @@
 
   <div>
-    <p>Este es el contador: {{contador}}
+    <p>: {{contador}}
     <button class="btn btn-outline-success my-2 my-sm-0" (click)="incrementar()">+</button>
     <button class="btn btn-outline-success my-2 my-sm-0" (click)="decrementar()">-</button>
     </p>
