--- a/PizzApp-Front/src/app/app.component.html
+++ b/PizzApp-Front/src/app/app.component.html
@@ -3,13 +3,11 @@
   <h1>Welcome to {{ title }}!</h1>
 </div>
 <app-navbar></app-navbar>
-<app-pedido></app-pedido>
 
 <div *ngIf="articulos!=null; else espera">
   {{articulos}}
+  <ng-template #espera>Esperando datos...</ng-template>
 </div>
-<ng-template #espera>Esperando datos...</ng-template>
-<div>{{articulos}}</div>
-
+<div><app-dropdown></app-dropdown></div>
 
 <router-outlet></router-outlet>
