style: se mueve la pantalla de nuevo pedido al menu Mostrador->Pedido

--- a/PizzApp-Front/src/app/components/nuevo-pedido/crear-pedido/crear-pedido.component.html
+++ b/PizzApp-Front/src/app/components/nuevo-pedido/crear-pedido/crear-pedido.component.html
@@ -1,5 +1,7 @@
-<p>
+<div>
+<!--
+  <button type="button" class="btn btn-secondary btn-lg" [routerLink]="['dropdown']">Nuevo Pedido</button>
+-->
 
-  <button>Nuevo Pedido</button>
-
-</p>
+  <button type="button" class="btn btn-warning" (clic)="['homeClientes']">Nuevo Pedido</button>
+</div>
