--- a/PizzApp-Front/src/app/components/home-clientes/home-clientes.component.html
+++ b/PizzApp-Front/src/app/components/home-clientes/home-clientes.component.html
@@ -1,5 +1,5 @@
 
 
-<button (click)= agregarCliente() >Agregar Cliente</button>
+<button (click)= agregarCliente() class="btn btn-warning" >Agregar Cliente</button>
 
-<button>Buscar Cliente</button>
+<button class="btn btn-warning" >Buscar Cliente</button>
