--- a/PizzApp-Front/src/app/components/nuevo-pedido/crear-pedido/crear-pedido.component.html
+++ b/PizzApp-Front/src/app/components/nuevo-pedido/crear-pedido/crear-pedido.component.html
@@ -1,7 +1,2 @@
-<div>
-<!--
-  <button type="button" class="btn btn-secondary btn-lg" [routerLink]="['dropdown']">Nuevo Pedido</button>
--->
 
-  <button type="button" class="btn btn-warning" (clic)="['homeClientes']">Nuevo Pedido</button>
-</div>
+  <button (click)= crearPedido() class="btn btn-warning">Nuevo Pedido</button>
