feat: se agrega pantalla de busqueda de cliente

--- a/PizzApp-Front/src/app/components/home-clientes/home-clientes.component.html
+++ b/PizzApp-Front/src/app/components/home-clientes/home-clientes.component.html
@@ -2,4 +2,4 @@
 
 <button (click)= agregarCliente() class="btn btn-warning" >Agregar Cliente</button>
 
-<button class="btn btn-warning" >Buscar Cliente</button>
+<button (click)= buscarCliente() class="btn btn-warning" >Buscar Cliente</button>
