--- a/PizzApp-Front/src/app/app.component.html
+++ b/PizzApp-Front/src/app/app.component.html
@@ -8,6 +8,9 @@
   {{articulos}}
   <ng-template #espera>Esperando datos...</ng-template>
 </div>
+
+<app-switchWindows></app-switchWindows>
+
 <div><app-dropdown></app-dropdown></div>
 
 <router-outlet></router-outlet>
