style: cosmetica al footer y header... estoy probando cosas, el header no me gusta por lo que no va a quedar así

--- a/PizzApp-Front/src/app/components/footer/footer.component.html
+++ b/PizzApp-Front/src/app/components/footer/footer.component.html
@@ -1,3 +1,7 @@
+
 <footer class="footer">
-  <p class="text-center">&copy; 12C Inc.</p>
+  <div class="inner">
+    <span class="text-muted" > &copy; 2018 PizzApp by 12C </span>
+    <img align="right" width="50" height="50"  class= "img-boton btn-padding-right" src="../../../assets/img/logo 12c.png">
+  </div>
 </footer>
