--- a/PizzApp-Front/src/app/components/home-clientes/home-clientes.component.html
+++ b/PizzApp-Front/src/app/components/home-clientes/home-clientes.component.html
@@ -1,5 +1,10 @@
 
+<div class="panel panel-default">
 
-<button (click)= agregarCliente() class="btn btn-warning" >Agregar Cliente</button>
+  <div class="panel-body">Home Clientes</div>
 
-<button (click)= buscarCliente() class="btn btn-warning" >Buscar Cliente</button>
+  <button (click)= agregarCliente() class="btn btn-warning" >Agregar Cliente</button>
+
+  <button (click)= buscarCliente() class="btn btn-warning" >Buscar Cliente</button>
+
+</div>
