--- a/PizzApp-Front/src/app/components/crear-cliente/crear-cliente.component.html
+++ b/PizzApp-Front/src/app/components/crear-cliente/crear-cliente.component.html
@@ -34,7 +34,7 @@
       </div>
     </div>
   </div>
-  <button class="btn btn-primary"  class="btn btn-warning" >Aceptar</button>
+  <button class="btn btn-primary"  class="btn btn-warning" (click)=crearCliente()>Aceptar</button>
 </form>
 
 </div>
