--- a/PizzApp-Front/src/app/components/navbar/navbar.component.html
+++ b/PizzApp-Front/src/app/components/navbar/navbar.component.html
@@ -11,9 +11,9 @@
           Clientes
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownAdmin">
-          <button type="button" class="btn btn-outline-secondary btn-block" [routerLink]="['homeClientes']">Nuevo</button>
+          <button type="button" class="btn btn-outline-secondary btn-block" [routerLink]="['crearCliente']">Nuevo</button>
           <div class="dropdown-divider"></div>
-          <button type="button" class="btn btn-outline-secondary btn-block">Buscar</button>
+          <button type="button" class="btn btn-outline-secondary btn-block" [routerLink]="['buscarCliente']">Buscar</button>
         </div>
       </li>
       <li class="nav-item dropdown">
@@ -21,9 +21,9 @@
           Productos
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownVentas">
-          <button type="button" class="btn btn-outline-secondary btn-block"[routerLink]="['nuevoPedido']">Nuevo</button>
+          <button type="button" class="btn btn-outline-secondary btn-block"[routerLink]="['nuevoProducto']">Nuevo</button>
           <div class="dropdown-divider"></div>
-          <button type="button" class="btn btn-outline-secondary btn-block">Buscar</button>
+          <button type="button" class="btn btn-outline-secondary btn-block"[routerLink]="['buscarProducto']">Buscar</button>
         </div>
       </li>
       <li class="nav-item dropdown">
@@ -34,8 +34,8 @@
           <button type="button" class="btn btn-outline-secondary btn-block">Buscar</button>
           <!--(click)="listarProductos()"-->
           <div class="dropdown-divider"></div>
-          <button type="button" class="btn btn-outline-secondary btn-block">Buscar</button>
-          <!--[push]='ProductosPage' (click)="irAProductos()"-->
+          <!--button type="button" class="btn btn-outline-secondary btn-block">Buscar</button>
+          <[push]='ProductosPage' (click)="irAProductos()"-->
         </div>
       </li>
     </ul>
