--- a/PizzApp-Front/src/app/components/buscar-cliente/buscar-cliente.component.html
+++ b/PizzApp-Front/src/app/components/buscar-cliente/buscar-cliente.component.html
@@ -30,13 +30,20 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td>1</td>
+        <!--td>1</td>
         <td>Espi</td>
         <td>Noso</td>
         <td>calle falsa 123</td>
-        <td>555-1213</td>
-      </tr>
+        <td>555-1213</td-->
+      
+      <tr *ngFor="let cliente of clientes">
+            <td>{{cliente.nombre}}</td>
+            <td>{{cliente.apellido}}</td> 
+            <td>{{cliente.direccion}}</td>
+            <td>{{cliente.telefono}}</td>
+        </tr>
+      
     </tbody>
   </table>
 </div>
+<div>{{clientes}}</div>
