--- a/PizzApp-Front/src/app/components/navbar/navbar.component.html
+++ b/PizzApp-Front/src/app/components/navbar/navbar.component.html
@@ -31,6 +31,8 @@
           Pedidos Activos
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownVentas">
+          <button type="button" class="btn btn-outline-secondary btn-block"[routerLink]="['nuevoPedido']">Nuevo</button>
+
           <button type="button" class="btn btn-outline-secondary btn-block">Buscar</button>
           <!--(click)="listarProductos()"-->
           <div class="dropdown-divider"></div>
