--- a/PizzApp-Front/src/app/components/crear-cliente/crear-cliente.component.html
+++ b/PizzApp-Front/src/app/components/crear-cliente/crear-cliente.component.html
@@ -1,18 +1,18 @@
 <div class="main-container form animated fadeIn fast">
 <h2>Alta de Cliente</h2>
 
-<form class="main-container" novalidate>
+<form class="main-container"  (submit)= submit()>
   <div class="form-row">
     <div class="col-md-4 mb-3">
-      <label for="validationTooltip01">Nombre</label>
-      <input type="text" class="form-control" id="validationTooltip01"required>
+      <label for="txtNombre">Nombre</label>
+      <input type="text" class="form-control" id="txtNombre"required name="txtNombre" [(ngModel)]="model.nombre">
       <div class="valid-tooltip">
         Looks good!
       </div>
     </div>
     <div class="col-md-4 mb-3">
-      <label for="validationTooltip02">Apellido</label>
-      <input type="text" class="form-control" id="validationTooltip02" required>
+      <label for="txtApellido">Apellido</label>
+      <input type="text" class="form-control" id="txtApellido" required name="txtApellido"  [(ngModel)]="model.apellido">
       <div class="valid-tooltip">
         Looks good!
       </div>
@@ -20,19 +20,19 @@
   </div>
   <div class="form-row">
     <div class="col-md-6 mb-3">
-      <label for="validationTooltip03">Dirección</label>
-      <input type="text" class="form-control" id="validationTooltip03"required>
+      <label for="txtDireccion">Dirección</label>
+      <input type="text" class="form-control" id="txtDireccion"required name="txtDireccion"  [(ngModel)]="model.direccion">
       <div class="invalid-tooltip">
         Please provide a valid city.
       </div>
     </div>
     <div class="col-md-3 mb-3">
-      <label for="validationTooltip05">Teléfono</label>
-      <input type="text" class="form-control" id="validationTooltip05"required>
+      <label for="intTelefono">Teléfono</label>
+      <input type="number" class="form-control" id="intTelefono"required name="intTelefono"  [(ngModel)]="model.telefono">
       <div class="invalid-tooltip">
         Please provide a valid zip.
       </div>
     </div>
   </div>
-  <button class="btn btn-primary"  class="btn btn-warning" (click)=crearCliente()>Aceptar</button>
+  <button class="btn btn-primary" type="submit" class="btn btn-warning" >Aceptar</button>
 </form>
