fix: post crear cliente

--- a/PizzApp-Front/src/app/app.component.html
+++ b/PizzApp-Front/src/app/app.component.html
@@ -1,8 +1,8 @@
 
 <div class="content">
 
-  <div class="jumbotron" xmlns:float="http://www.w3.org/1999/xhtml">
-    <img width="80" style="float:left;" height="80" src="../../../assets/img/logo_pizzapp.png">
+  <div height="100px" class="app-footer" xmlns:float="http://www.w3.org/1999/xhtml" style="background-color:burlywood">
+    <img width="80px"  style="float:left;" height="80px" src="../../../assets/img/logo_pizzapp.png">
     <h1>PizzApp</h1>
     <p>El mejor lugar... la mejor pizza</p>
   </div>
