--- a/PizzApp-Front/src/app/components/nuevo-pedido/crear-pedido/crear-pedido.component.html
+++ b/PizzApp-Front/src/app/components/nuevo-pedido/crear-pedido/crear-pedido.component.html
@@ -1,7 +1,7 @@
 
 <div class="container"> 
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-7">
         <div class="row">
           <div class="col-sm-4" style="margin:5px" *ngFor="let producto of productos;">
                 <button width="200px" height="50px" class="btn btn-default btn-lg btn-block" type="submit"  (click)= addProduct(producto)>
@@ -11,9 +11,9 @@
           <span></span>
       </div>  
     </div>
-    <div class="col-sm-4" id= "containerproductSelecteds">
-      <table class="table table-hover">
-        <thead>
+    <div class="col-sm-5" id= "containerproductSelecteds">
+      <table class="table table-striped">
+        <thead >
           <tr>
             <th>#</th>
             <th>Producto</th>
@@ -24,16 +24,24 @@
         </thead>
         <tbody>
           <tr *ngFor="let line of lines; let i = index" [attr.data-index]="i">
-            <td>{{i}}</td>
+            <td>{{i +1}}</td>
             <td>{{line.producto}}</td>
             <td>{{line.cantidad}}</td>
-            <td>{{line.precio}}</td>
+            <td>{{line.precio * line.cantidad}}</td>
             <td>
-              <button class="btn btn-danger" (click)= deleteLine(i)>
-                <i class="fa fa-trash" ></i></button>
-              <button class="btn btn-warning">
-                <i class="fa fa-exchange"></i>
-              </button>
+              <div class="row">
+                <div class="col-sm-6">
+                  <button class="btn btn-danger" (click)= deleteLine(i)>
+                    <i class="fa fa-trash" ></i>
+                  </button>
+                  </div>
+                  <div class="col-sm-6">
+                  <button class="btn btn-warning">
+                    <i class="fa fa-exchange"></i>
+                  </button>
+                </div>
+              </div>
+            
             </td>
           </tr>
         </tbody>
@@ -41,6 +49,10 @@
 
     </div>
   </div>
-
+  <div>
+      <button width="200px" height="50px" class="btn btn-success btn-lg btn-block" type="submit" (click)= addPedido()>
+        Crear
+      </button>
+  </div>
 
 </div>
