feat/fix: al agregar producto repetido en un pedido se suma uno a la cantidad del mismo

--- a/PizzApp-Front/src/app/components/nuevo-pedido/crear-pedido/crear-pedido.component.html
+++ b/PizzApp-Front/src/app/components/nuevo-pedido/crear-pedido/crear-pedido.component.html
@@ -48,7 +48,7 @@
     </div>
   </div>
   <div>
-      <button width="200px" height="50px" class="btn btn-success btn-lg btn-block" type="submit" (click)= addPedido()>
+      <button width="200px" height="50px" class="btn btn-success btn-lg btn-block" type="submit" (click)= crearPedido()>
         Crear
       </button>
   </div>
