--- a/PizzApp-Front/src/app/components/navbar/navbar.component.html
+++ b/PizzApp-Front/src/app/components/navbar/navbar.component.html
@@ -28,7 +28,7 @@
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownVentas" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Pedidos Activos
+          Pedidos
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownVentas">
           <button type="button" class="btn btn-outline-secondary btn-block"[routerLink]="['nuevoPedido']">Nuevo</button>
