--- a/PizzApp-Front/src/app/components/nuevo-pedido/crear-pedido/crear-pedido.component.html
+++ b/PizzApp-Front/src/app/components/nuevo-pedido/crear-pedido/crear-pedido.component.html
@@ -2,7 +2,27 @@
 <div class="container"> 
   <div class="row">
     <div class="col-sm-7">
-        <div class="row">
+        <div class="row"> 
+          <div class="col-sm-12">
+
+            
+            <div class="dropdown">
+              <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
+              <span class="caret"></span></button>
+              <ul tr *ngFor="let producto of productos">
+                <input class="form-control" id="myInput" type="text" placeholder="Search..">
+                <li><a href="#">HTML</a></li>
+                <li><a href="#">CSS</a></li>
+                <li><a href="#">JavaScript</a></li>
+                <li><a href="#">jQuery</a></li>
+                <li><a href="#">Bootstrap</a></li>
+                <li><a href="#">Angular</a></li>
+              </ul>
+            </div>
+          </div>
+
+
+
           <div class="col-sm-4" style="margin:5px" *ngFor="let producto of productosDisponibles;">
                 <button width="200px" height="50px" class="btn btn-default btn-lg btn-block" type="submit"  (click)= addProduct(producto)>
                   {{producto.nombre}}
