fix:bloqueo de letras en precio de producto

--- a/PizzApp-Front/src/app/components/nuevo-producto/nuevo-producto.component.html
+++ b/PizzApp-Front/src/app/components/nuevo-producto/nuevo-producto.component.html
@@ -12,7 +12,7 @@
         </div>
         <div class="col-md-4 mb-3">
           <label for="txtPrecio">Precio</label>
-          <input type="text" class="form-control" id="txtPrecio"required name="txtPrecio" [(ngModel)]="model.precio">
+          <input type="number" class="form-control" id="txtPrecio"required name="txtPrecio" [(ngModel)]="model.precio">
           <div class="valid-tooltip">
             Looks good!
           </div>
