--- a/PizzApp-Front/src/app/components/navbar/navbar.component.html
+++ b/PizzApp-Front/src/app/components/navbar/navbar.component.html
@@ -33,7 +33,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdownVentas">
           <button type="button" class="btn btn-outline-secondary btn-block"[routerLink]="['nuevoPedido']">Nuevo</button>
 
-          <button type="button" class="btn btn-outline-secondary btn-block">Buscar</button>
+          <button type="button" class="btn btn-outline-secondary btn-block"[routerLink]="['buscarPedido']">Buscar</button>
           <!--(click)="listarProductos()"-->
           <div class="dropdown-divider"></div>
           <!--button type="button" class="btn btn-outline-secondary btn-block">Buscar</button>
