--- a/PizzApp-Front/src/app/components/crear-cliente/crear-cliente.component.html
+++ b/PizzApp-Front/src/app/components/crear-cliente/crear-cliente.component.html
@@ -23,16 +23,36 @@
       <label for="txtDireccion">Dirección</label>
       <input type="text" class="form-control" id="txtDireccion"required name="txtDireccion"  [(ngModel)]="model.direccion">
       <div class="invalid-tooltip">
-        Please provide a valid city.
+        Por favor ingresa una dirección correcta
       </div>
     </div>
     <div class="col-md-3 mb-3">
       <label for="intTelefono">Teléfono</label>
       <input type="number" class="form-control" id="intTelefono"required name="intTelefono"  [(ngModel)]="model.telefono">
       <div class="invalid-tooltip">
-        Please provide a valid zip.
+        Por favor ingresa un telefono correcto
       </div>
     </div>
   </div>
-  <button class="btn btn-primary" type="submit" class="btn btn-warning" >Aceptar</button>
+  <button class="btn btn-primary" type="submit" class="btn btn-warning" data-toggle="modal" data-target="#createCliente">Aceptar</button>
 </form>
+
+
+<div class="modal fade" id="createCliente" tabindex="-1" role="dialog" aria-labelledby="createCliente" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Nuevo cliente</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <label for="MyField">El cliente se creo con exitó</label>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
