fix : se corrigieron nombres para la implementación de los cambios del back a la solucion de las cantidades en los pedidos

--- a/PizzApp-Front/src/app/components/buscar-pedido/buscar-pedido.component.html
+++ b/PizzApp-Front/src/app/components/buscar-pedido/buscar-pedido.component.html
@@ -13,7 +13,7 @@
         <td>{{pedido.cliente}}</td>
         <td>
           <div *ngFor="let lin of pedido.linea">
-            <label>{{lin.nombre}} - cantidad: {{lin.cantidad}}</label>
+            <label>{{lin.nombreProd}} - cantidad: {{lin.cantidad}}</label>
           </div>
           
           </td>
